lab1/Test/L1-A-12-98.output
Error Type A at Line 5
Error Type A at Line 6
Error Type B at Line 12
Error Type A at Line 18
Error Type A at Line 27
Error Type B at Line 30
Error Type A at Line 30
Error Type B at Line 33
Error Type B at Line 40
