lab1/Test/L1-A-12-98.cmm
float ;
struct {
  struct {
    struct {
^    }z0 ;
\  }BzhEHVcYmlYCWOxJLiI ;
  struct tVfHme {
  }PwiGYCkvfjU , rvz43YU0VbQbe = t_tdcTwoIuC4ZCwPKOa 
    = nrAYXKN_wPcRlBWO && Vp1uDV >= SBWsLa1qg + GxbGqT3Ti 
    [ Ko2UyFAbj3jm61U2G9s || z7_Exn0zwM <= cCEW4qInCAillgn 
    - kCkS / - ! LgPkz ( v3Ib , EfNlXY_DJ_CubUpD == M0CUAGCKKUJ 
    * ( KT2jQyp8u6NzfaNyV || != zYo8Fmxkd + Rv0OvxXjV 
    / GIdRiIplUeRIrWbO3GP [ Ko1J7CKQ535 || bauZx / t [ 
    jutl2HGMlLzLzE6j > Ua - d0OZirwjMgYs_0yXQYMQ ( I && 
    xjTub7xn5JW0PitBtd ) ] . ruKciHLwm99nnXn23O4O ] / 
    434929040 ) . OYVW4mXR3MEfUBPV2U < - 1408601332.1845329015 
    * t ( ) ) ] ;
}#;
int nQc ( int H4S_R9AzU60TjRqp6t8 ) {
  struct kFKf CZOfYL0DZl9oN ;
}
int wBgqD6ID [ 1289993336 ] , Cw6dnwFzsI_S9b 

;
int xiGMd ( ) {
  nfTSK2QwviVjQo ;
  uE6mP2pH435EbSIErM ^;
  if ( gNXuSDEsm )   while ( yJuRxYPogu50mOe_oWIx 
    )   if ( nbHk2KyTEnnozl )   shrLx66E0J1 
else   return jSACYBWwdVeXoF0qfRfY ;\


else   if n0fOG6g6jsZz )   jhn_svJHvLP2C8 ;


{
  }}
int ;
int fmTu1 ( int XpDmTEHVc5KvSKGngKX , int xUwmwnCOip 
  ) }
